<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="436dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/bc_1"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="436dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/bg_1"
        android:alpha="0.3"
        tools:ignore="ContentDescription" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="253dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="478dp">

        <ImageView
            android:id="@+id/imageViewId"
            android:layout_width="159dp"
            android:layout_height="148dp"
            android:src="@drawable/baby"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="134dp"
            android:layout_height="30dp"
            android:fontFamily="@font/annie_use_your_telescope"
            android:text="@string/learn_with_mee"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.793" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="299dp"
            android:layout_height="87dp"
            android:fontFamily="@font/amatica_sc_bold"
            android:shadowColor="#7C2A2A"
            android:shadowDx="3"
            android:shadowDy="1.5"
            android:shadowRadius="15"
            android:text="@string/my_toddler_app"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.722" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="156dp"
            android:layout_height="70dp"
            android:fontFamily="@font/bangers"
            android:shadowColor="#655A5A"
            android:shadowDx="3"
            android:shadowDy="1.5"
            android:shadowRadius="15"
            android:text="@string/letters"
            android:textAlignment="center"
            android:textSize="45sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageViewId"
            app:layout_constraintVertical_bias="0.966" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="472dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="258dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="1dp"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_a"
                tools:ignore="ContentDescription" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_b"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_c"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_d"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_e"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_f"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_g"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_h"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_i"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_j"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_k"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_l"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_m"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_n"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_o"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_p"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_q"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_r"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_s"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_t"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_u"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_v"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_w"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_x"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_y"
                android:layout_marginTop="15dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/l_z"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                tools:ignore="ContentDescription" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>